@@ -19,7 +19,6 @@
 (eval-after-load 'ruby-mode
   '(progn
      (define-key ruby-mode-map "\C-c\C-e" 'ruby-insert-end)
-     (define-key ruby-mode-map "\C-c{" 'ruby-toggle-block)
 
      (defun ruby-insert-end ()
        (interactive)
@@ -31,47 +30,6 @@
              (insert " "))
          (ruby-indent-line t)
          (end-of-line)))
-
-     (defun ruby-brace-to-do-end ()
-       (when (looking-at "{")
-         (let ((orig (point)) (end (progn (ruby-forward-sexp) (point))))
-           (when (eq (preceding-char) ?\})
-             (delete-char -1)
-             (if (eq (char-syntax (preceding-char)) ?w)
-                 (insert " "))
-             (insert "end")
-             (if (eq (char-syntax (following-char)) ?w)
-                 (insert " "))
-             (goto-char orig)
-             (delete-char 1)
-             (if (eq (char-syntax (preceding-char)) ?w)
-                 (insert " "))
-             (insert "do")
-             (when (looking-at "\\sw\\||")
-               (insert " ")
-               (backward-char))
-             t))))
-
-     (defun ruby-do-end-to-brace ()
-       (when (and (or (bolp)
-                      (not (memq (char-syntax (preceding-char)) '(?w ?_))))
-                  (looking-at "\\<do\\(\\s \\|$\\)"))
-         (let ((orig (point)) (end (progn (ruby-forward-sexp) (point))))
-           (backward-char 3)
-           (when (looking-at ruby-block-end-re)
-             (delete-char 3)
-             (insert "}")
-             (goto-char orig)
-             (delete-char 2)
-             (insert "{")
-             (if (looking-at "\\s +|")
-                 (delete-char (- (match-end 0) (match-beginning 0) 1)))
-             t))))
-
-     (defun ruby-toggle-block ()
-       (interactive)
-       (or (ruby-brace-to-do-end)
-           (ruby-do-end-to-brace)))
 
      (defconst ruby-default-encoding-map
        '((us-ascii       . nil)       ;; Do not put coding: us-ascii
