@@ -1,3 +1,10 @@
+Wed Oct 30 19:07:57 2013  Akinori MUSHA  <knu@iDaemons.org>
+
+	* misc/ruby-additional.el (ruby-brace-to-do-end)
+	  (ruby-do-end-to-brace, ruby-toggle-block): Remove functions that
+	  are already in the latest released version of Emacs (24.3).
+	  [Bug #7565]
+
 Wed Oct 30 12:44:28 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* win32/Makefile.sub (config.status): add missing variables,
